organización de tablas compelta

--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -1,9 +1,10 @@
 <header-page-asignar />
 <select #filtro (change)="onFiltroChange(filtro.value)" class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600">
-  <option value="todos">Todos</option>
+  <option selected value="todos">Todos</option>
   <option value="asignados">Asignados</option>
   <option value="noAsignados">No Asignados</option>
 </select>
+
 @if (mostrarRefrescoPagina == true) {
 <div
   class="max-w-sm w-full min-h-[400px] flex flex-col justify-center mx-auto px-6 py-4"
