--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/header/header-page-table-tipo-usuario/header-page-table-tipo-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/header/header-page-table-tipo-usuario/header-page-table-tipo-usuario.component.html
@@ -1,14 +1,20 @@
-<div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700">
+<div
+  class="container-header px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700"
+>
   <div>
-    <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
-      ROLES
+    <h2 class="text-xl font-semibold text-gray-100 dark:text-neutral-200">
+      ROLES USUARIOS
     </h2>
-    <p class="text-sm text-gray-600 dark:text-neutral-400">
-      Listado de roles
+    <p class="text-sm text-gray-100 dark:text-neutral-400">
+      Registra y gestiona a tus usuarios
+      <a
+        class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
+        >usuarios</a
+      >
+      de manera rápida y sensilla
     </p>
   </div>
-
-  <div>
+  <div class="inline-flex gap-x-2">
     <div class="inline-flex gap-x-2">
       <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" href="#">
         View all
