--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
@@ -1,55 +1,65 @@
-<header-table />
+<header-page-table-tipo-usuario />
 
-          <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-            <thead class="bg-gray-50 dark:bg-neutral-900">
-              <tr>
-                <th scope="col" class="px-6 py-3 text-start">
-                  <header-table-title [title]="'Rol'" />
-                </th>
+<table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+  <thead class="bg-gray-50 dark:bg-neutral-900">
+    <tr>
+      <th scope="col" class="px-6 py-3 text-start">
+        <header-table-title [title]="'Rol'" />
+      </th>
 
-                <th scope="col" class="px-6 py-3 text-start">
-                  <header-table-title [title]="'estado'" />
-                </th>
+      <th scope="col" class="px-6 py-3 text-start">
+        <header-table-title [title]="'estado'" />
+      </th>
 
-                <th scope="col" class="px-6 py-3 text-start">
-                  <header-table-title [title]="'fechacreacion'" />
-                </th>
+      <th scope="col" class="px-6 py-3 text-start">
+        <header-table-title [title]="'fechacreacion'" />
+      </th>
 
-                <th scope="col" class="px-6 py-3 text-end"></th>
-              </tr>
-            </thead>
+      <th scope="col" class="px-6 py-3 text-end"></th>
+    </tr>
+  </thead>
 
-            <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-              @for (item of DatosTipoUsuario; track $index) {
-                <tr class="bg-white hover:bg-gray-50 dark:bg-neutral-900 dark:hover:bg-neutral-800">
-                  <td class="size-px whitespace-nowrap">
-                    <body-table-button [text]="item.rol"/>
-                  </td>
-                  <td class="size-px whitespace-nowrap">
-                    <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
-                      @if (item.estado == "1") {
-                        <!-- <body-table-estado-activo /> -->
-                      }@else {
-                        <!-- <body-table-estado-inactivo /> -->
-                      }
-                    </button>
-                  </td>
-                  <td class="size-px whitespace-nowrap">
-                    <body-table-button [text]="item.fechacreacion"/>
-                  </td>
-                  <td class="size-px whitespace-nowrap">
-                    <!-- <body-table-button-icon [text]="'Detalle'" /> -->
-                  </td>
-                </tr>
-              }
-            </tbody>
+  <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+    @for (item of DatosTipoUsuario; track $index) {
+    <tr
+      class="bg-white hover:bg-gray-50 dark:bg-neutral-900 dark:hover:bg-neutral-800"
+    >
+      <td class="size-px whitespace-nowrap">
+        <body-table-button [text]="item.rol" />
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <button
+          type="button"
+          class="block"
+          aria-haspopup="dialog"
+          aria-expanded="false"
+          aria-controls="hs-ai-invoice-modal"
+          data-hs-overlay="#hs-ai-invoice-modal"
+        >
+          @if (item.estado == "1") {
+          <!-- <body-table-estado-activo /> -->
+          }@else {
+          <!-- <body-table-estado-inactivo /> -->
+          }
+        </button>
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <body-table-button [text]="item.fechacreacion" />
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <!-- <body-table-button-icon [text]="'Detalle'" /> -->
+      </td>
+    </tr>
+    }
+  </tbody>
+</table>
 
-          </table>
-
-          <!-- @if (DatosEmpresas.length == 0) {
+<!-- @if (DatosEmpresas.length == 0) {
             <message-empty-list />
           }
           <footer-table [text]="cantidadEmpresas"/> -->
 
 <!-- <detalle-empresa />
 <registro-empresa /> -->
+
+<footer-general />
