--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -1,29 +1,4 @@
-  <!-- Header -->
-  <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700">
-    <div>
-      <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
-        Usuarios
-      </h2>
-      <p class="text-sm text-gray-600 dark:text-neutral-400">
-        Registra y gestiona a tus usuarios de manera rápida y sensilla
-      </p>
-    </div>
-
-    <div>
-      <div class="inline-flex gap-x-2">
-        <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" href="#">
-          View all
-        </a>
-
-        <a data-hs-overlay="#registro-usuarios" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
-          Create
-        </a>
-      </div>
-    </div>
-  </div>
-  <!-- End Header -->
-
+  <header-table-usuarios />
   <!-- Table -->
   <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
     <thead class="bg-gray-50 dark:bg-neutral-900">
@@ -182,6 +157,10 @@
     </div>
   </div>
   <!-- End Footer -->
+  <footer-general />
+
+
+
 
 <!-- Modal -->
 <div id="hs-ai-invoice-modal" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-ai-invoice-modal-label">
