--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -7,30 +7,7 @@
         <div
           class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
         >
-          <!-- Header -->
-          <div
-            class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700"
-          >
-            <div>
-              <h2
-                class="text-xl font-semibold text-gray-800 dark:text-neutral-200"
-              >
-                Reporte Inventarios
-              </h2>
-              <p class="text-sm text-gray-600 dark:text-neutral-400">
-                Genera tus reportes de
-                <a
-                  class="inline-flex items-center gap-x-1.5 text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
-
-                  >manera sensilla</a
-                >
-              </p>
-            </div>
-            <!-- Botones opcionales -->
-          </div>
-          <!-- End Header -->
-
-
+        <header-page-reporte-inventario />
           @if (mostrarRefrescoPagina == true) {
             <!-- Body -->
             <div
@@ -333,10 +310,6 @@
             <!-- End Table -->
             }
 
-
-
-
-
           <!-- Footer -->
           <div
             class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
@@ -357,6 +330,7 @@
             </div>
           </div>
           <!-- End Footer -->
+          <footer-general />
         </div>
       </div>
     </div>
