organización codigo registro carga inventario

--- a/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.html
@@ -1,4 +1,4 @@
-<div class="container_opciones mt-12 mb-12 md:mt-16 md:mb-16 lg:mt-16 lg:mb-16">
+<div class="container_opciones  ">
   <ul>
     @for (item of mainMenu.accessLink; track $index) {
       <target-opcion [imagen]="item.imagen" [name]="item.name" [route]="item.route"  />
