--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -1,11 +1,11 @@
-<div class="w-full lg:ps-64">
-  <div class="w-full lg:ps-0 bg-fondo-datos">
+<div class=" w-full lg:ps-64">
+  <div class=" w-full lg:ps-0 bg-fondo-datos">
     <div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
       <section>
         <div class="max-w-[95rem] py-10 lg:py-4 mx-auto">
           <div class="flex flex-col">
-            <div class="-m-1.5 overflow-x-auto">
-              <div class="p-1.5 min-w-full inline-block align-middle">
+            <div class=" -m-1.5 overflow-x-auto">
+              <div class="scroll-stylep-1.5 min-w-full inline-block align-middle">
                 <div
                   class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
                 >
@@ -20,8 +20,5 @@
     </div>
   </div>
 </div>
-
-
-
 
 <registro-carga-inventarios />
