--- a/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.css
+++ b/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.css
@@ -1,54 +1,12 @@
-.bg-header-deashboard {
-  width: 100%;
-  background-image: url("../../../../../../assets/images/bg_fondo.webp");
-  background-repeat: no-repeat;
-  object-fit: cover;
-  background-position: center center;
-  background-size: cover;
-  padding: 1rem 2rem;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-
-.bg-header-deashboard .container-logo {
-  flex: .7;
-  align-items: start;
-}
-
-.bg-header-deashboard svg {
-  width: 7rem;
-}
-
-.bg-header-deashboard h3 {
-  flex: 1;
-  text-align: left;
-  font-size: 1.5rem;
-  color: white;
-}
-
-.bg-header-deashboard h3 span {
-  color: #00D1AE;
-}
-
 .container_opciones {
   width: 100%;
+  height: 100%;
   display: grid;
   place-content: center;
-  /* margin-top: 4rem;
-  margin-bottom: 4rem; */
+  background-color: white;
+  padding: 4rem 0;
 }
 
-.container_opciones h3 {
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  color: var(--color-principal-3);
-}
 
 ul {
   display: flex;
