organizacion asignar tabla

--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -6,60 +6,7 @@
 </select>
 
 @if (mostrarRefrescoPagina == true) {
-<div
-  class="max-w-sm w-full min-h-[400px] flex flex-col justify-center mx-auto px-6 py-4"
->
-  <div
-    class="flex justify-center items-center size-[46px] bg-gray-100 rounded-lg dark:bg-neutral-800"
-  >
-    <svg
-      class="shrink-0 size-6 text-gray-600 dark:text-neutral-400"
-      xmlns="http://www.w3.org/2000/svg"
-      width="16"
-      height="16"
-      fill="currentColor"
-      viewBox="0 0 16 16"
-    >
-      <path
-        d="M1.92.506a.5.5 0 0 1 .434.14L3 1.293l.646-.647a.5.5 0 0 1 .708 0L5 1.293l.646-.647a.5.5 0 0 1 .708 0L7 1.293l.646-.647a.5.5 0 0 1 .708 0L9 1.293l.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .801.13l.5 1A.5.5 0 0 1 15 2v12a.5.5 0 0 1-.053.224l-.5 1a.5.5 0 0 1-.8.13L13 14.707l-.646.647a.5.5 0 0 1-.708 0L11 14.707l-.646.647a.5.5 0 0 1-.708 0L9 14.707l-.646.647a.5.5 0 0 1-.708 0L7 14.707l-.646.647a.5.5 0 0 1-.708 0L5 14.707l-.646.647a.5.5 0 0 1-.708 0L3 14.707l-.646.647a.5.5 0 0 1-.801-.13l-.5-1A.5.5 0 0 1 1 14V2a.5.5 0 0 1 .053-.224l.5-1a.5.5 0 0 1 .367-.27zm.217 1.338L2 2.118v11.764l.137.274.51-.51a.5.5 0 0 1 .707 0l.646.647.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.509.509.137-.274V2.118l-.137-.274-.51.51a.5.5 0 0 1-.707 0L12 1.707l-.646.647a.5.5 0 0 1-.708 0L10 1.707l-.646.647a.5.5 0 0 1-.708 0L8 1.707l-.646.647a.5.5 0 0 1-.708 0L6 1.707l-.646.647a.5.5 0 0 1-.708 0L4 1.707l-.646.647a.5.5 0 0 1-.708 0l-.509-.51z"
-      />
-      <path
-        d="M3 4.5a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5zm8-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5z"
-      />
-    </svg>
-  </div>
-
-  <h2 class="mt-5 font-semibold text-gray-800 dark:text-white">
-    Error al obtener los datos
-  </h2>
-  <p class="mt-2 text-sm text-gray-600 dark:text-neutral-400">
-    Refresque la página para poder a cargar los datos
-  </p>
-  <div class="mt-5 flex flex-col sm:flex-row gap-2">
-    <button
-      (click)="recargarPagina()"
-      type="button"
-      class="py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
-    >
-      <svg
-        class="shrink-0 size-4"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      >
-        <path d="M5 12h14" />
-        <path d="M12 5v14" />
-      </svg>
-      Recargar página
-    </button>
-  </div>
-</div>
+  <mensaje-error-tabla-datos-asignar (recargar)="recargarPagina()" />
 }@else {
 <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
   <thead class="bg-gray-50 dark:bg-neutral-900">
@@ -76,53 +23,23 @@
       </th>
 
       <th scope="col" class="px-6 py-3 text-start">
-        <div class="flex items-center gap-x-2">
-          <span
-            class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
-          >
-            Descripción
-          </span>
-        </div>
+        <th-table-asignar [descripcion]="'Descripcion'" />
       </th>
 
       <th scope="col" class="px-6 py-3 text-start">
-        <div class="flex items-center gap-x-2">
-          <span
-            class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
-          >
-            Usuario Asignado
-          </span>
-        </div>
+        <th-table-asignar [descripcion]="'Usuario Asignado'" />
       </th>
 
       <th scope="col" class="px-6 py-3 text-start">
-        <div class="flex items-center gap-x-2">
-          <span
-            class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
-          >
-            Detalle
-          </span>
-        </div>
+        <th-table-asignar [descripcion]="'Detalle'" />
       </th>
 
       <th scope="col" class="px-6 py-3 text-start">
-        <div class="flex items-center gap-x-2">
-          <span
-            class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
-          >
-            Estado
-          </span>
-        </div>
+        <th-table-asignar [descripcion]="'Estado'" />
       </th>
 
       <th scope="col" class="px-6 py-3 text-start">
-        <div class="flex items-center gap-x-2">
-          <span
-            class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
-          >
-            Fecha registro
-          </span>
-        </div>
+        <th-table-asignar [descripcion]="'Fecha registro'" />
       </th>
 
       <th scope="col" class="px-6 py-3 text-end"></th>
@@ -147,31 +64,22 @@
       </td>
 
       <td class="size-px whitespace-nowrap">
-        <div class="px-6 py-3 flex gap-2 align-center">
-          <img src="../../../../../../assets/svg/icon_excel.svg" alt="" />
-          <span class="text-sm text-gray-600 dark:text-neutral-400">{{
-            item.descripcion
-          }}</span>
-        </div>
+        <td-descripcion-asignar [descripcion]="item.descripcion" />
       </td>
       <td class="size-px whitespace-nowrap">
-        <div class="px-6 py-3">
-          <div class="flex items-center gap-x-2">
-            <img
-              class="inline-block size-6 rounded-full"
-              src="https://images.unsplash.com/photo-1531927557220-a9e23c1e4794?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80"
-              alt="Avatar"
-            />
-            <div class="grow">
-              <span class="text-sm text-gray-600 dark:text-neutral-400">{{
-                item.usuarioAsignado || 'Sin asignar'
-              }}</span>
-            </div>
-          </div>
-        </div>
+        <td-usuario-asignar [usuario]="item.usuarioAsignado" />
       </td>
       <td class="size-px whitespace-nowrap">
-        <div class="px-6 py-3">
+        <button-icon-asignar
+        [idcarga]="item.idcarga"
+        [rucempresa]="item.rucempresa"
+        (obtenerDetalle)="
+          ObtenerDetalleInventarios(
+            $event.rucempresa,
+            $event.idcarga
+          )
+        "/>
+        <!-- <div class="px-6 py-3">
           <button
             (click)="ObtenerDetalleInventarios(item.rucempresa, item.idcarga)"
             title="none"
@@ -184,104 +92,20 @@
           >
             <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
           </button>
-        </div>
+        </div> -->
       </td>
       <td class="size-px whitespace-nowrap">
-        <div class="px-6 py-3">
-          @if (item.estado == "1") {
-          <span
-            class="py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-teal-100 text-teal-800 rounded-full dark:bg-teal-500/10 dark:text-teal-500"
-          >
-            <svg
-              class="size-2.5"
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
-              />
-            </svg>
-            Activo
-          </span>
-          } @if (item.estado == "2") {
-          <span
-            class="inline-flex items-center gap-1.5 py-0.5 px-2 rounded-full text-xs font-medium bg-orange-100 text-orange-800 dark:bg-orange-900 dark:text-green-200"
-          >
-            <svg
-              class="size-2.5"
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
-              ></path>
-            </svg>
-            Inactivo
-          </span>
-          } @if (item.estado == "3") {
-          <span
-            class="inline-flex items-center gap-1.5 py-0.5 px-2 rounded-full text-xs font-medium bg-red-100 text-red-800 dark:bg-red-900 dark:text-green-200"
-          >
-            <svg
-              class="size-2.5"
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
-              ></path>
-            </svg>
-            Anulado
-          </span>
-          }
-        </div>
+        <td-estado-asignar [estado]="item.estado" />
       </td>
       <td class="size-px whitespace-nowrap">
-        <div class="px-6 py-3">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">{{
-            item.fechacarga
-          }}</span>
-        </div>
+        <td-fecha-asignar [fecha]="item.fechacarga" />
       </td>
       <td class="size-px whitespace-nowrap">
         <div class="px-6 py-1.5">
           <div
             class="hs-dropdown [--placement:bottom-right] relative inline-block"
           >
-            <button
-              id="hs-table-dropdown-1"
-              type="button"
-              class="hs-dropdown-toggle py-1.5 px-2 inline-flex justify-center items-center gap-2 rounded-lg text-gray-700 align-middle disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:text-neutral-400 dark:hover:text-white dark:focus:ring-offset-gray-800"
-              aria-haspopup="menu"
-              aria-expanded="false"
-              aria-label="Dropdown"
-            >
-              <svg
-                class="shrink-0 size-4"
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <circle cx="12" cy="12" r="1" />
-                <circle cx="19" cy="12" r="1" />
-                <circle cx="5" cy="12" r="1" />
-              </svg>
-            </button>
+          <button-ver-detalle-asignar />
             <div
               aria-hidden="true"
               class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden divide-y divide-gray-200 min-w-40 z-10 bg-white shadow-2xl rounded-lg p-2 mt-2 dark:divide-neutral-700 dark:bg-neutral-800 dark:border dark:border-neutral-700"
@@ -290,7 +114,6 @@
               aria-labelledby="hs-table-dropdown-1"
             >
               <div class="py-2 first:pt-0 last:pb-0">
-                @if (item.usuarioAsignado.trim() == "") {
                 <a
                   (click)="
                     ObtenerDetatosInventarios(item.rucempresa, item.idcarga)
@@ -301,22 +124,14 @@
                   data-hs-overlay="#hs-sign-out-alert"
                   class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
                 >
-                  Asignar
+                  @if (item.usuarioAsignado.trim() == "") {
+                    Asignar
+                  }
+
+                  @if (item.usuarioAsignado.trim() != "") {
+                    Cambiar asignado
+                  }
                 </a>
-                } @if (item.usuarioAsignado.trim() != "") {
-                <a
-                  (click)="
-                    ObtenerDetatosInventarios(item.rucempresa, item.idcarga)
-                  "
-                  aria-haspopup="dialog"
-                  aria-expanded="false"
-                  aria-controls="hs-sign-out-alert-asigancion"
-                  data-hs-overlay="#hs-sign-out-alert"
-                  class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                >
-                  Cambiar asignado
-                </a>
-                }
               </div>
               <div class="py-2 first:pt-0 last:pb-0">
                 <a
@@ -357,18 +172,14 @@
 
 <footer-general />
 
-
-<!-- Modal detalle inventario -->
  <detalle-carga-inventarios
   [citaSeleccionada]="datosInventario"
   [detalleProductos]="listaProductos"
   [cantidadInventarios]="cantidadListaProductos"
 />
 
-
 <registro-asignar-page
   [rucEmpresa]="datosInventario.rucempresa"
   [idCarga]="datosInventario.idcarga"
   [getUsuarios_All]="getUsuarios_All"
 />
-
