--- a/src/app/Ui/Modules/Asignaciones/page/asignaciones/asignaciones.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/asignaciones/asignaciones.component.html
@@ -1,5 +1,8 @@
-<div class="w-full h-[100vh] lg:ps-64">
-  <div class="bg-fondo-datos  p-4 sm:p-6 space-y-4 sm:space-y-6">
+<div class="w-full h-[100vh] lg:ps-64 lg:flex">
+  <!-- <div class="w-full h-full bg-fondo-fitros-datos p-4 lg:overflow-y-auto space-y-4 sm:space-y-6 lg:w-60">
+    <header-filtro-asignacion />
+  </div> -->
+  <div class="w-full bg-fondo-datos py-4 space-y-4 sm:space-y-6">
     <lista-asignar-page />
   </div>
 </div>
