--- a/src/app/Ui/Shared/feactures/cargarInventario/Buttons/agregar-producto/agregar-producto.component.html
+++ b/src/app/Ui/Shared/feactures/cargarInventario/Buttons/agregar-producto/agregar-producto.component.html
@@ -2,7 +2,7 @@
   aria-haspopup="dialog"
   aria-expanded="false"
   aria-controls="hs-sign-out-alert-mas-productos"
-  data-hs-overlay="#hs-sign-out-alert"
+  data-hs-overlay="#hs-sign-out-alert-mas-productos"
   class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
 >
   Productos +
