--- a/src/app/Ui/Modules/Asignaciones/page/asignaciones/asignaciones.component.css
+++ b/src/app/Ui/Modules/Asignaciones/page/asignaciones/asignaciones.component.css
@@ -8,3 +8,7 @@
 .bg-fondo-datos {
   background-color: rgb(243, 243, 243);
 }
+
+.bg-fondo-fitros-datos {
+  background-color: rgb(255, 255, 255);
+}
