--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -61,6 +61,7 @@ class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700"
             aria-labelledby="hs-table-dropdown-1"
           >
             <div class="py-2 first:pt-0 last:pb-0">
+              <agregar-producto />
               <opcion-table-asignar-usuario
                 [idcarga]="item.idcarga"
                 [rucempresa]="item.rucempresa"
@@ -127,3 +128,5 @@ class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t 
   [idCarga]="datosInventario.idcarga"
   [getUsuarios_All]="getUsuarios_All"
 />
+
+<registro-producto-new-inventario />
