--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -171,14 +171,28 @@
               >
                 Nombre
               </label>
-              <input
+              @if (selectedFileName) {
+                <input
                 formControlName="descripcion"
                 [(ngModel)]="Cabecera.descripcion"
                 id="af-submit-project-url"
                 type="text"
+                [value]="selectedFileName"
                 class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                 placeholder="Ingresar nombre"
               />
+              }@else {
+                <input
+                formControlName="descripcion"
+                [(ngModel)]="Cabecera.descripcion"
+                id="af-submit-project-url"
+                type="text"
+                [value]="selectedFileName"
+                class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar nombre"
+              />
+              }
+
             </div>
 
             <div class="Buttons_eventos">
