--- a/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
+++ b/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
@@ -1,5 +1,5 @@
 @for (item of mainMenu.accessLink; track $index) { @if (item.subMenu != true) {
-<li>
+<li id="menu-item-{{ $index }}">
   <a
     [routerLink]="item.route"
     class="flex items-center justify-start gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-700 dark:bg-neutral-700 dark:text-white"
@@ -10,7 +10,7 @@
   </a>
 </li>
 }@else {
-<li class="hs-accordion" id="account-accordion">
+<li class="hs-accordion" id="account-accordion menu-item-{{ $index }}">
   <button
     type="button"
     class="hs-accordion-toggle w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800 dark:bg-neutral-800 dark:hover:bg-neutral-700 dark:text-neutral-200"
@@ -92,3 +92,4 @@
   </div>
 </li>
 } }
+
