--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -289,14 +289,28 @@
                         aria-labelledby="hs-table-dropdown-1"
                       >
                         <div class="py-2 first:pt-0 last:pb-0">
+
                           <descargar-reporte-excel
                             [rucEmpresa]="item.rucempresa"
                             [idCarga]="item.idcarga"
                           />
-                          <descargar-reporte-pdf
-                          [rucEmpresa]="item.rucempresa"
-                          [idCarga]="item.idcarga"
-                            />
+
+                          <a
+                          class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
+                          (click)="
+                            inventarioSeleccionado(
+                              item.rucempresa,
+                              item.idcarga
+                            )
+                          "
+                          data-hs-overlay="#hs-bg-reporte-pdf"
+                        >
+                          PDF
+                        </a>
+                          <!-- <descargar-reporte-pdf
+                            [rucEmpresa]="item.rucempresa"
+                            [idCarga]="item.idcarga"
+                          /> -->
                         </div>
                         <div class="py-2 first:pt-0 last:pb-0">
                           <a
@@ -349,4 +363,4 @@
 </div>
 <!-- End Table Section -->
 
-<design-report-inventario />
+<design-report-inventario [citaSeleccionada]="InventarioSeleccionado" />
